[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = ""
authors = ["jvitorcardoso <aspirantevitor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
